--- a/views/admin/bannerManagement.ejs
+++ b/views/admin/bannerManagement.ejs
@@ -1,6 +1,5 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/addProduct.css">
-
 </head>
 <body>
     <div class="backButton">
@@ -8,12 +7,9 @@
             <button class="btn btn-dark">Back</button>
         </a>
     </div>
-
     <div class="container mainCont mb-5">
         <h3 class="mb-5 mt-3 text-center" style="font-family: 'Michroma', sans-serif;">Banner Management</h3>
-
         <form action="/admin/updateBanner" class="needs-validation" method="POST" enctype="multipart/form-data">
-            
             <div class="form-group">
                 <div class="d-grid" style="grid-template-columns: repeat(2, 1fr); column-gap: 10px; row-gap: 10px;">
                   <label for="images">Images :</label> <br>
@@ -33,50 +29,14 @@
                             }
                         }
                     </script>
-                    
                 </div>
                 <label class="mt-3" for="images" >Select Images:</label> <br>
                 <small>Max 4 Images!</small> <br>
                 <input class="inputFieldImage" type="file" class="form-control-file" id="images" name="images" accept="image/*" multiple >
             </div>
-
             <div class="submitButton">
-            <button type="submit" class="btn btn-danger rounded-pill">Update Banner</button></div>
+            <button type="submit" class="btn btn-dark rounded-pill">Update Banner</button></div>
         </form>
     </div>
-    <div class="alertKey">
-        <% if(locals.message) { %>
-          <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-            data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-            <strong><%= message %></strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-          
-          <script>
-            // Add this script to your page
-            setTimeout(function() {
-              document.getElementById('success-alert').style.display = 'none';
-            }, 2000); // Adjust the delay (in milliseconds) as needed
-          </script>
-        <% } %>      
-      </div>
-      <div class="alertKey">
-        <% if(locals.messageS) { %>
-          <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-            data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-            <strong><%= messageS %></strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-      
-          <script>
-            // Add this script to your page
-            setTimeout(function() {
-              document.getElementById('success-alert').style.display = 'none';
-            }, 2000); // Adjust the delay (in milliseconds) as needed
-          </script>
-        <% } %>      
-      </div>
-
-
-
+<%- include('../layout/alert')-%>
 <%- include('../layout/footerHTML')-%>
