--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,5 +1,5 @@
 <%- include('../layout/headerHTML')-%>
-<link rel="stylesheet" href="../../public/css/addProduct.css">
+<link rel="stylesheet" href="../../public/css/category.css">
 
 </head>
 <body>
@@ -9,20 +9,9 @@
             <button class="btn btn-dark">Back</button>
         </a>
     </div>
-    <main class="container w-50">
-        <header class="main-header navbar">
-           
-            <div class="col-nav">
-                <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
-                <ul class="nav">
-   
-                </ul>
-            </div>
-        </header>
+    <main class="container w-50 mt-5">
         <section class="content-main">
-            <div class="content-header">
-               
-            </div>
+          
             <div class="card p-2" style="background-color:  #be6fff; border-radius: 20px; border: 1px solid rgb(60, 60, 60); ">
                 <div class="card-body">
                   <div>
@@ -61,11 +50,9 @@
         <% if (categories=='') { %>
           <h2 class="text-center">No Such categories</h2>
         <% } %>
-        
         <% if (categories) { %>
           <h4 class="text-center mb-3 mt-2"  style="font-family: 'Michroma', sans-serif;">Categories ( <%=categories.length%> )</h4>
         <% categories.forEach(category=>{%>
-
             <div class=" w-100 p-3 m-3" style="display: flex; flex-wrap: wrap; justify-content: space-between; border: 1px solid rgb(189, 189, 189); border-radius: 20px; background-color: #be6fff; box-shadow: 0px 0px 3px violet;" >
               <div class=""  style="font-family: 'Michroma', sans-serif;">
                 <span class="card-title d-block"><span class=" text-break overflow-auto word-wrap" style="font-size: 17px; font-weight: 700;">Name : </span><%= category.name%></span>
@@ -78,101 +65,12 @@
                   <a href="/admin/deleteCategory?id=<%=category._id%>" class="btn ms-2 btn-danger rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=category.deleted?"Show":"Hide"; %></a>
                 </div>
               </div>
-            
-            
-            
             <%})%>
         <% } else { %>
           <h2 class="text-center">No Such Categories</h2>
         <% } %>
-
         </div> 
-        
-        <div class="alertKey">
-            <% if(locals.message) { %>
-              <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-                data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-                <strong><%= message %></strong>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-              </div>
-              
-              <script>
-                // Add this script to your page
-                setTimeout(function() {
-                  document.getElementById('success-alert').style.display = 'none';
-                }, 2000); // Adjust the delay (in milliseconds) as needed
-              </script>
-            <% } %>      
-          </div>
-          <div class="alertKey">
-            <% if(locals.messageS) { %>
-              <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-                data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-                <strong><%= messageS %></strong>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-              </div>
-          
-              <script>
-                // Add this script to your page
-                setTimeout(function() {
-                  document.getElementById('success-alert').style.display = 'none';
-                }, 2000); // Adjust the delay (in milliseconds) as needed
-              </script>
-            <% } %>      
-          </div>
-
+<%- include('../layout/alert')-%>
 </div>
-
-<script>
-  (() => {
-      'use strict';
-      const forms = document.querySelectorAll('.needs-validation');
-      Array.from(forms).forEach(form => {
-          form.addEventListener('submit', async event => {
-              event.preventDefault();
-              const nameInput = form.querySelector('[name="name"]');
-              const nameValue = nameInput.value;
-              const discountPercentageInput = form.querySelector('[name="discountPercentage"]');
-              const discountPercentageValue = discountPercentageInput.value;
-
-              if (/^\s*$/.test(nameValue) || nameValue === '' || nameValue.length > 15) {
-                  showAlert('Enter a valid name.');
-                  return;
-              }
-
-              const discountValue = parseInt(discountPercentageValue);
-              if (/^\s*$/.test(discountPercentageValue) || isNaN(discountValue) || discountValue > 80 || discountValue < 0) {
-                  showAlert('Enter a valid discount percentage between 0 and 80.');
-                  return;
-              }
-
-              try {
-                // Submit the form using AJAX
-                const response = await fetch("/admin/createCategory", {
-                    method: "POST",
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ name: nameValue, discountPercentage: discountPercentageValue }),
-                }).then(response=>response.json()).then(data=>{
-                  if(data.category==="exist"){
-                    showAlert(data.message)
-                  }else if(data.category==="true"){
-                    showSuccess("Updating");
-                    window.location.reload()
-                  }else{
-                    showAlert("Error While Updating!!")
-                  }
-                })
-              } catch (error) {
-                  console.error('Error submitting the form:', error);
-                  showAlert('An error occurred while submitting the form.');
-              }
-          });
-      });
-  })();
-</script>
-
-
-
-    <%- include('../layout/footerHTML')-%>
+<script src="../../public/jsFiles/category.js"></script>
+<%- include('../layout/footerHTML')-%>
