--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -36,14 +36,14 @@
                             </div>
                             <div class="col-md-12">
                                 <label for="validationCustom02" class="form-label">Minimum Amount :</label>
-                                <input type="number" class="form-control rounded-pill" id="validationCustom02" name="minimumAmount"  required>
+                                <input type="number" class="form-control rounded-pill" id="validationCustom02" name="minimumAmount">
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <label for="validationCustom02" class="form-label">Maximum Amount :</label>
-                                <input type="number" class="form-control rounded-pill" id="validationCustom02" name="maximumAmount"  required>
+                                <input type="number" class="form-control rounded-pill" id="validationCustom02" name="maximumAmount">
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
@@ -62,8 +62,7 @@
                             </div>
                         </form>
                     </div>
-
-                    <div class="col" style="display: flex; justify-content: center; align-items: center;">
+                    <div class="col mb-auto" style="display: flex; justify-content: center; align-items: center;">
                         <div class="row g-1" style="display: flex; justify-content: center;">
                             <div style="font-family: 'Michroma', sans-serif;">
                                 <h4 class="text-center mb-3">Coupons ( <%=coupons.length%> )</h4>
@@ -100,95 +99,5 @@
         </div>
     </section>
 </main>
-<script>
-    
-    (() => {
-    'use strict';
-
-    const forms = document.querySelectorAll('.needs-validation');
-
-    Array.from(forms).forEach(form => {
-        form.addEventListener('submit', async event => {
-            event.preventDefault();
-
-            const codeInput = form.querySelector('[name="code"]');
-            const codeValue = codeInput.value.trim();
-
-            const dateInput = form.querySelector('[name="discountExpiryDate"]');
-            const dateValue = dateInput.value;
-
-            const discountInput = form.querySelector('[name="discountPercentage"]');
-            const discountValue = discountInput.value.trim();
-            const discount = parseInt(discountValue);
-
-            const minimumInput = form.querySelector('[name="minimumAmount"]');
-            const minimumValue = parseFloat(minimumInput.value);
-            
-            const maximumInput = form.querySelector('[name="maximumAmount"]');
-            const maximumValue = parseFloat(maximumInput.value);
-
-            if (codeValue === '' || !isNaN(codeValue) || codeValue.length > 15 || codeValue.length < 4) {
-                showAlert('Please enter a valid code.');
-                return;
-            }
-
-            if (!isValidFutureDate(dateValue)) {
-                showAlert('Please enter a valid future date.');
-                return;
-            }
-            if ((minimumValue < 0 || maximumValue < 0) || minimumValue >= maximumValue) {
-                showAlert('Please enter a valid Amount.');
-                return;
-            }
-
-
-            function isValidFutureDate(dateString) {
-                // Check if the input is a non-empty string
-                if (!dateString || typeof dateString !== 'string') {
-                    return false;
-                }
-
-                // Attempt to create a Date object from the input
-                const dateObject = new Date(dateString);
-
-                // Check if the Date object is valid and if it is a future date
-                return !isNaN(dateObject.getTime()) && dateObject > new Date();
-            }
-
-            if (discountValue === '' || discount >= 80 || discount < 1) {
-                showAlert('Please enter a valid discount value.');
-                return;
-            }
-
-            if (!form.checkValidity()) {
-                showAlert("Validation Failed")
-                return;
-            }
-
-            try {
-                const response = await fetch(`/admin/addCoupon?code=${codeValue}&discount=${discountValue}&date=${dateValue}&min=${minimumValue}&max=${maximumValue}`);
-                const data = await response.json();
-                console.log(data);
-                if (data.added === true) {
-                    showSuccess('Updating!');
-                    form.classList.add('was-validated');
-                    location.reload();
-                } else if (data.added === "exist") {
-                    showAlert('Coupon already exists!');
-                } else if (data.added === "not") {
-                    showAlert('Not Valid');
-                } else if (data.added === false) {
-                    showSuccess('Not Added');
-                }
-            } catch (error) {
-                console.error("Error checking category:", error);
-            }
-        });
-
-        // Remove the 'was-validated' class from here
-    });
-})();
-
-</script>
-
+<script src="../../public/jsFiles/coupon.js"></script>
 <%- include('../layout/footerHTML')-%>
