--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -10,13 +10,6 @@
 </head>
 <body>
     <%- include('../layout/adminHeader')-%>
-    
-
-
-
-
-
-
     <div class="container mt-5 mb-5">
       <h3 class="text-center mb-2 d-block" style="  font-family: 'Michroma', sans-serif;">Total Sales & Stats</h3>
       <div class="btn-group dropdown" style="font-family: 'Michroma', sans-serif; font-size: large; color: white !important;">
@@ -79,7 +72,6 @@
                               </ul>
                           </div>
                           <%}%>
-
                           <%if(locals?.salesMonthly.length>0){%>
                             <div class="btn-group dropend">
                               <button class="btn btn-dark dropdown-toggle px-3 py-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -94,7 +86,6 @@
                               </ul>
                             </div>
                           <%}%>
-
                     </ul>
                 </div>
             </li>
@@ -116,10 +107,6 @@
     </div>
       <canvas id="myChart" style="width:100%; max-width:1000 px"></canvas>
     </div>
-   
-    
-
-    
     <div class="modal fade" id="datepickerModal" tabindex="-1" role="dialog" aria-labelledby="datepickerModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -143,14 +130,12 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <!-- Add any other actions you need, such as submitting the selected dates -->
               <button type="submit" class="btn btn-primary">Apply</button>
             </div>
           </form>
         </div>
       </div>
     </div>
-    
     <div class="modal fade datepickerModal2" id="datepickerModal2" tabindex="-1" role="dialog" aria-labelledby="datepickerModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -162,7 +147,6 @@
             </button>
             </div>
             <div class="modal-body">
-              <!-- Date picker input fields -->
               <div class="form-group">
                 <label for="startDate">Start Date:</label>
                 <input type="date" class="form-control" id="startDateChart" name="startDate">
@@ -174,131 +158,12 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <!-- Add any other actions you need, such as submitting the selected dates -->
               <button type="submit" class="btn btn-primary">Apply</button>
             </div>
           </form>
         </div>
       </div>
     </div>
-    
-    
-    
-    
-    
-    <script>
-      document.addEventListener('DOMContentLoaded', function () {
-        // Handle button click
-        document.getElementById('customDatesBtn').addEventListener('click', function() {
-          // Show the date picker modal or perform any other actions
-          var modal = new bootstrap.Modal(document.getElementById('datepickerModal'));
-          modal.show();
-        });
-
-        document.getElementById('customDatesBtn2').addEventListener('click', function() {
-          // Show the date picker modal or perform any other actions
-          var modal = new bootstrap.Modal(document.getElementById('datepickerModal2'));
-          modal.show();
-        });
-    
-        // Handle form submission
-        document.getElementById('datePickerForm').addEventListener('submit', function (event) {
-          event.preventDefault(); // Prevent the default form submission behavior
-          handleCustomDates();
-        });
-        document.getElementById('datePickerForm2').addEventListener('submit', function (event) {
-          event.preventDefault(); // Prevent the default form submission behavior
-          handleCustomDates2();
-        });
-      });
-    
-      const handleCustomDates = () => {
-        const startDateInput = document.getElementById('startDate');
-        const endDateInput = document.getElementById('endDate');
-    
-        // Get the values
-        const startDateValue = startDateInput.value;
-        const endDateValue = endDateInput.value;
-    
-        // Validate if both dates are selected
-        if (!startDateValue || !endDateValue) {
-            showAlert("Please select both start and end dates.");
-            return;
-        }
-    
-        // Convert the string values to Date objects
-        const startDate = new Date(startDateValue);
-        const endDate = new Date(endDateValue);
-    
-        // Validate if the dates have a valid format
-        if (isNaN(startDate.getTime()) || isNaN(endDate.getTime())) {
-            showAlert("Invalid date format. Please select valid dates.");
-            return;
-        }
-    
-        // Validate if there is a difference between the dates
-        if (startDate > endDate) {
-            showAlert("End date must be greater or equal to the start date.");
-            return;
-        }
-    
-        // Validate if the selected date is not a future date
-        const today = new Date();
-        if (endDate > today) {
-            showAlert("End date cannot be a future date.");
-            return;
-        }
-    
-        const form=document.getElementById('datePickerForm')
-        form.submit();
-        form.reset();
-      };
-      const handleCustomDates2 = () => {
-        const startDateInput = document.getElementById('startDateChart');
-        const endDateInput = document.getElementById('endDateChart');
-    
-        // Get the values
-        const startDateValue = startDateInput.value;
-        const endDateValue = endDateInput.value;
-    
-        // Validate if both dates are selected
-        if (!startDateValue || !endDateValue) {
-            showAlert("Please select both start and end dates.");
-            return;
-        }
-    
-        // Convert the string values to Date objects
-        const startDate = new Date(startDateValue);
-        const endDate = new Date(endDateValue);
-    
-        // Validate if the dates have a valid format
-        if (isNaN(startDate.getTime()) || isNaN(endDate.getTime())) {
-            showAlert("Invalid date format. Please select valid dates.");
-            return;
-        }
-    
-        // Validate if there is a difference between the dates
-        if (startDate > endDate) {
-            showAlert("End date must be greater or equal to the start date.");
-            return;
-        }
-    
-        // Validate if the selected date is not a future date
-        const today = new Date();
-        if (endDate > today) {
-            showAlert("End date cannot be a future date.");
-            return;
-        }
-    
-        const form=document.getElementById('datePickerForm2')
-        salesByRange(startDateValue,endDateValue);
-        form.reset();
-      };
-    
-    </script>
-    
-
-
 <div class="container dataContainer">
   <style>
     .custom-table {
@@ -334,9 +199,6 @@
     </tbody>
   </table>
 </div>
-
-    
-
 <div class="container mt-5 mb-4" style="font-family: 'Michroma', sans-serif;">
   <div class="d-flex justify-content-center gap-3 flex-wrap">
     <div class="card">
@@ -381,11 +243,6 @@
     </div>
   </div>
 </div>
-
-
-
-
-
 <h3 class="text-center mb-3 mt-5 d-block" style="  font-family: 'Michroma', sans-serif;">Top Selling Products</h3>
 <div class="container d-flex mb-5">
   <div class="col-12" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-around;">
@@ -401,291 +258,14 @@
       <%})%>
   </div>
 </div>
-
-
 <script>
-  const dataContainer=document.querySelector(".dataContainer");
-let x = "<%=xValues%>";
-let y = "<%= yValues %>";
-function decodeHtml(html) {
-    var txt = document.createElement("textarea");
-    txt.innerHTML = html;
-    return txt.value;
-}
-
-let description = "<%= JSON.stringify(data) %>";
-let decodedDescription = decodeHtml(description);
-let parsedDescription = JSON.parse(decodedDescription);
-let disc=[];
-parsedDescription.forEach(data => {
-  disc.push(data.toString())
-});
-// console.log(disc);
-
-const defaultX=x.split(',')
-const defaultY=y.split(',').map(Number)
-
-
-
- function selectMonth(selectedItem) {
-  $('.dropdown-toggle').dropdown('toggle');
-    // Perform Fetch API request based on the selected item
-    fetch('/admin/getByMonth', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ month: selectedItem }),
-    })
-    .then(response => response.json())
-    .then(data => {
-        if(data.get === true) {
-            x = data.x;
-            y = data.y;
-            let message='Orders Of '+selectedItem;
-            const label="Status"
-            if((x.length&&y.length)===0){
-              message='No Orders In '+selectedItem;
-            }
-            // showAlert("This is it")
-            updateChart(x, y,message,label);
-        } else {
-            showAlert("Error");
-        }
-    })
-    .catch(error => {
-        console.error('Error:', error);
-    });
-}
-
-
-
-
- function selectYear(selectedItem) {
-  $('.dropdown-toggle').dropdown('toggle');
-    // Perform Fetch API request based on the selected item
-    fetch('/admin/getByYear', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ year: selectedItem }),
-    })
-    .then(response => response.json())
-    .then(data => {
-        if(data.get === true) {
-            x = data.x;
-            y = data.y;
-            const message='Orders Of The Year '+selectedItem;
-            const label="Months"
-            // showAlert("This is it")
-            updateChart(x, y,message,label);
-        } else {
-            showAlert("Ooops!");
-        }
-    })
-    .catch(error => {
-        console.error('Error:', error);
-    });
-}
-
- function salesByCategory() {
-  $('.dropdown-toggle').dropdown('toggle');
-    fetch('/admin/salesByCategory')
-    .then(response => response.json())
-    .then(data => {
-        if(data.get === true) {
-            x = data.x;
-            y = data.y;
-            const message='Orders Based On the Category';
-            const label="Categories"
-            updateChart(x, y,message,label);
-        } else {
-            showAlert("Ooops!");
-        }
-    })
-    .catch(error => {
-        console.error('Error:', error);
-    });
-}
-
- function salesByRange(start,end) {
-  const datepickerModal2 = document.querySelector('.datepickerModal2');
-
-if (datepickerModal2) {
-  const modalInstance = new bootstrap.Modal(datepickerModal2);
-  datepickerModal2.style.display='none'
-  const backdropElement = document.querySelector('.modal-backdrop');
-  if (backdropElement) {
-    backdropElement.remove();
-  }
-} else {
-  console.error("Modal element not found or is null");
-}
-console.log("hahahhahah")
-
-    fetch(`/admin/getByDateRange?startDate=${start}&endDate=${end}`)
-    .then(response => response.json())
-    .then(data => {
-        if(data.get === true) {
-            x = data.x;
-            y = data.y;
-            const message=`Orders From ${start} to ${end}` ;
-            const label="Status"
-            updateChart(x, y,message,label);
-        } else {
-            showAlert("Ooops!");
-        }
-    })
-    .catch(error => {
-        console.error('Error:', error);
-    });
-}
-
-
-function updateChart(xValues, yValues,message,label) {
-  dataContainer.style.display='none';
-    // Assuming "myChart" is the variable referencing your chart
-    myChart.data.labels = xValues;
-    myChart.data.datasets[0].data = yValues;
-    myChart.options.title.text=message;
-    myChart.options.scales.xAxes[0].scaleLabel.labelString = label;
-    // Update the chart
-    myChart.update();
-}
-function reset() {
-  $('.dropdown-toggle').dropdown('toggle');
-  dataContainer.style.display='block';
-    // Assuming "myChart" is the variable referencing your chart
-    myChart.data.labels = defaultX;
-    myChart.data.datasets[0].data = defaultY;
-    myChart.options.title.text="Orders By Payment Method";
-    myChart.options.scales.xAxes[0].scaleLabel.labelString="Payment Method";
-    // Update the chart
-    myChart.update();
-}
-
-// Your existing chart creation code
-
-let xValues = x.split(',');
-let yValues = y.split(',').map(Number);
-let descriptions = disc;
-// console.log(xValues);
-// console.log(yValues);
-const barColors = ["#00008b", "#000000", "brown", "#186F65", "purple"];
-
-
-let myChart = new Chart("myChart", {
-    type: "bar",
-    data: {
-        labels: xValues,
-        datasets: [{
-            backgroundColor: barColors,
-            data: yValues,
-        }],
-    },
-    options: {
-    legend: { display: false },
-    title: {
-        display: true,
-        text: "Orders By Payment Method",
-        fontSize: 18,
-        fontWeight: 'bold',
-    },
-    scales: {
-        xAxes: [{
-            scaleLabel: {
-                display: true,
-                labelString: "Payment Method",
-                fontSize: 16,
-                fontWeight: 'bold',
-            },
-            ticks: {
-                fontSize: 17,
-            },
-        }], 
-        yAxes: [{
-            scaleLabel: {
-                display: true,
-                labelString: "Orders",
-                fontSize: 16,
-                fontWeight: 'bold',
-            },
-            ticks: {
-                fontSize: 17,
-                precision: 0,
-                suggestedMax: 10,
-                suggestedMin: 0,
-            },
-        }],
-    },
-    animation: {
-        duration: 1500,
-    },
-    // tooltips: {
-    //         callbacks: {
-    //             label: function (tooltipItem, data) {
-    //                 let index = tooltipItem.index;
-    //                 let value = data.datasets[0].data[index];
-    //                 let label = data.labels[index];
-    //                 let description = descriptions[index];
-    //                 return `Orders: ${value}   Status : ${description}`;
-    //             }
-    //         }
-    //     },
-},
-
-});
-
-document.querySelectorAll('.dropdown-item').forEach(function(item) {
-  item.addEventListener('click', function(event) {
-    var submenu = this.nextElementSibling;
-    if (submenu.style.display === 'none') {
-      submenu.style.display = 'block';
-    } else {
-      submenu.style.display = 'none';
-    }
-    // This line is to prevent the dropdown from closing
-    event.stopPropagation();
-  });
-});
+  let x = "<%=xValues%>";
+  let y = "<%= yValues %>";
+  let description = "<%= JSON.stringify(data) %>";
 </script>
 
-<div class="alertKey">
-  <% if(locals.message) { %>
-    <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-      data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-      <strong><%= message %></strong>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    
-    <script>
-      // Add this script to your page
-      setTimeout(function() {
-        document.getElementById('success-alert').style.display = 'none';
-      }, 2000); // Adjust the delay (in milliseconds) as needed
-    </script>
-  <% } %>      
-</div>
-<div class="alertKey">
-  <% if(locals.messageS) { %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-      data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-      <strong><%= messageS %></strong>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-
-    <script>
-      // Add this script to your page
-      setTimeout(function() {
-        document.getElementById('success-alert').style.display = 'none';
-      }, 2000); // Adjust the delay (in milliseconds) as needed
-    </script>
-  <% } %>      
-</div>
-
-
+<%- include('../layout/alert')-%>
+<script src="../../public/jsFiles/dashBoard.js"></script>
 <script src="../../public/jsFiles/searchVal.js"></script>
-
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
