--- a/views/admin/editCategory.ejs
+++ b/views/admin/editCategory.ejs
@@ -1,6 +1,5 @@
 <%- include('../layout/headerHTML')-%>
-<link rel="stylesheet" type="text/css" href="../../public/css/addProduct.css">
-
+<link rel="stylesheet" href="../../public/css/category.css">
 </head>
 <body>
     <div class="backButton" style="text-decoration: none;">
@@ -8,28 +7,13 @@
             <button class="btn btn-dark">Back</button>
         </a>
     </div>
-    <main class="container w-50">
-        <header class="main-header navbar">
-           
-            <div class="col-nav">
-                <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
-                <ul class="nav">
-   
-                </ul>
-            </div>
-        </header>
+    <main class="container w-50 mt-5">
         <section class="content-main">
-            <div class="content-header">
-              
-           
-            </div>
-           
             <div class="card p-2 mt-4" style="background-color:  #be6fff; border-radius: 20px; border: 1px solid rgb(40, 40, 40); ">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-12 ">
                     <h3 class="text-center"  style="font-family: 'Michroma', sans-serif;">Edit Category </h2>
-
                             <form action="/admin/editCategory?id=<%=categories._id%>" class="needs-validation" method="post">
                                 <div class="d-flex justify-content-end">
                                     <a href="/admin/deleteCategoryCompletely?id=<%=categories._id%>" class="btn btn-danger mb-3"  id="button" ><i class="fa-regular fa-trash-can fs-4"></i></a>
@@ -48,103 +32,15 @@
                                 </div>
                                 <div class="d-flex justify-content-center" >
                                     <button class="btn btn-dark rounded-pill px-5">Save</button>
-                                    
                                 </div>
                             </form>
                         </div>
-                        
+                        <script>const id="<%=categories._id%>";</script>
                     </div>
                 </div>
             </div></div>
         </section>
     </main>
-    
-    <div class="alertKey">
-        <% if(locals.message) { %>
-          <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-            data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-            <strong><%= message %></strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-          
-          <script>
-            // Add this script to your page
-            setTimeout(function() {
-              document.getElementById('success-alert').style.display = 'none';
-            }, 2000); // Adjust the delay (in milliseconds) as needed
-          </script>
-        <% } %>      
-      </div>
-      <div class="alertKey">
-        <% if(locals.messageS) { %>
-          <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-            data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-            <strong><%= messageS %></strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-      
-          <script>
-            // Add this script to your page
-            setTimeout(function() {
-              document.getElementById('success-alert').style.display = 'none';
-            }, 2000); // Adjust the delay (in milliseconds) as needed
-          </script>
-        <% } %>      
-      </div>
-
-
-<script>
-   document.addEventListener("DOMContentLoaded", function () {
-    'use strict';
-
-    const form = document.querySelector(".needs-validation");
-
-    form.addEventListener("submit", function (event) {
-        event.preventDefault();
-
-        const categoryNameInput = document.getElementById("product_name");
-        const categoryName = categoryNameInput.value;
-        const category = categoryName.trim();
-        const discountPercentageInput = document.getElementById("discountPercentage");
-        const discountPercentage = discountPercentageInput.value;
-        const dis = discountPercentage.trim();
-        const discount=parseInt(dis);
-        console.log(discount)
-        const id="<%=categories._id%>"
-        // Your form validation conditions
-        if (/^\s*$/.test(categoryName)) {
-            document.querySelector(".error-span").textContent = 'Category name cannot be just spaces.';
-            categoryNameInput.focus();
-            return;
-        }
-        if (/^\s*$/.test(discount) || isNaN(discount) || discount > 80 || discount < 0) {
-            showAlert('Enter a valid discount percentage between 0 and 80.');
-            return;
-        }
-        // Add additional form validation conditions as needed
-
-        fetch('/admin/checkCategory?name=' + category+"&id=" +id+"&discount="+discount)
-            .then(response => response.json())
-            .then(data => {
-                if(data.maximum==="true"){
-                    document.querySelector(".errorSpan").textContent = "Total Discount of Some of the Product is More than 80. Max("+data.max+")";
-                }else if (data.exists) {
-                    document.querySelector(".error-span").textContent = "Category name already exists";
-                    categoryNameInput.focus();
-                } else {
-                    document.querySelector(".error-span").innerHTML = '&nbsp;';
-                    if (form.checkValidity()) {
-                        showSuccess("Updating")
-                        event.target.submit();
-                    }
-                }
-            })
-            .catch(error => {
-                console.error("Error checking category:", error);
-            });
-    });
-});
-
-</script>
-
+<%- include('../layout/alert')-%>
+<script src="../../public/jsFiles/editCategory.js"></script>
 <%- include('../layout/footerHTML')-%>
