--- a/views/admin/editCoupon.ejs
+++ b/views/admin/editCoupon.ejs
@@ -4,20 +4,9 @@
 
 </head>
 <body>
-    <%- include('../layout/adminHeader') %>
-
+<%- include('../layout/adminHeader') %>
 <main class="container mt-5">
-    <section class="content-main">
-        <div class="content-header">
-            
-        </div>
-<!-- 
-        <form>
-            <div class="input-group mb-3">
-                <input list="search_terms" type="text" class="form-control" placeholder="Search term" name="search">
-                <button class="btn btn-primary" type="submit">Search</button>
-            </div>
-        </form> -->
+<section class="content-main">
 <div class="container" style="display: flex; justify-content: center;">
         <div class="card" style="width: max-content; display: flex; justify-content: center;">
             <div class="card-body" style="background-color: #be6fff; border: 1px solid rgb(30, 28, 28); border-radius: 5px;">
@@ -30,7 +19,6 @@
                 </div>
                 <div class="row" style="display: flex; justify-content: center;" >
                     <div class="col-md-4">
-                        
                         <form class="row g-3 needs-validation" novalidate enctype="application/form-data">
                             <div class="col-md-12">
                                 <label for="validationCustom01" class="form-label">Code</label>
@@ -74,95 +62,12 @@
                             </div>
                         </form>
                     </div>
-                    
+                    <script>const id = "<%=id%>"; </script>
                 </div>
             </div>
         </div>
     </div>
     </section>
 </main>
-<script>
-    (() => {
-        'use strict';
-    
-        const forms = document.querySelectorAll('.needs-validation');
-    
-        Array.from(forms).forEach(form => {
-            form.addEventListener('submit', async event => {
-                event.preventDefault();
-                const codeInput = form.querySelector('[name="code"]');
-                const codeValue = codeInput.value.trim();
-                const dateInput = form.querySelector('[name="discountExpiryDate"]');
-                const dateValue = dateInput.value;
-                const minimumInput = document.getElementById("minimumAmount");
-                const maximumInput = document.getElementById("maximumAmount");
-                const minimumValue = parseFloat(minimumInput.value);
-                const maximumValue = parseFloat(maximumInput.value);
-                
-                const id = "<%=id%>";
-    
-                const discountInput = form.querySelector('[name="discountPercentage"]');
-                const discountValue = discountInput.value.trim();
-                const discount = parseInt(discountValue);
-    
-                if (codeValue === '' || !isNaN(codeValue) || codeValue.length > 15 || codeValue.length < 4) {
-                    showAlert('Please enter a valid code.');
-                    return;
-                }
-
-                if (!isValidFutureDate(dateValue)) {
-                    showAlert('Please enter a valid future date.');
-                    return;
-                }
-                if ((minimumValue < 0 || maximumValue < 0) || minimumValue >= maximumValue) {
-                    showAlert('Please enter a valid Amount.');
-                    return;
-                }
-
-                function isValidFutureDate(dateString) {
-                    // Check if the input is a non-empty string
-                    if (!dateString || typeof dateString !== 'string') {
-                        return false;
-                    }
-
-                    // Attempt to create a Date object from the input
-                    const dateObject = new Date(dateString);
-
-                    // Check if the Date object is valid and if it is a future date
-                    return !isNaN(dateObject.getTime()) && dateObject > new Date();
-                }
-    
-                if (discountValue === '' || discount > 80 || discount < 1) {
-                    showAlert('Please enter a valid discount value.');
-                    return;
-                }
-    
-                if (!form.checkValidity()) {
-                    showAlert("Not Valid")
-                    return;
-                }
-    
-                try {
-                    const response = await fetch(`/admin/editCoupon?code=${codeValue}&discount=${discountValue}&id=${id}&date=${dateValue}&min=${minimumValue}&max=${maximumValue}`);
-                    const data = await response.json();
-                    console.log(data);
-                    if (data.added === true) {
-                        showSuccess('Updating!');
-                        // form.classList.add('was-validated'); // Add 'was-validated' class
-                        window.location.href = "/admin/couponManagement";
-                    } else if (data.added === "exist") {
-                        showAlert('Coupon already exists!');
-                    } else if (data.added === "not") {
-                        showAlert('Not Valid');
-                    } else if (data.added === false) {
-                        showSuccess('Not Added');
-                    }
-                } catch (error) {
-                    console.error("Error checking category:", error);
-                }
-            });
-        });
-    })();
-    </script>
-    
+<script src="../../public/jsFiles/editCoupon.js"></script>
 <%- include('../layout/footerHTML')-%>
