--- a/views/user/verifyOtpLogin.ejs
+++ b/views/user/verifyOtpLogin.ejs
@@ -6,7 +6,7 @@
     
 <div class="containerfluid d-flex mainContainer"> 
 <div class="mainCont">
-  <form class="row g-3 needs-validation" action="/user/verifyOtp/" method="post" enctype="application/form-data">
+  <form class="row g-3 needs-validation" action="/user/verifyOtp" method="post" enctype="application/form-data">
     <h3 class="mb-4 text-center mb-3" style="font-family: 'Michroma', sans-serif;">Verify !</h3>
     <div class="col-md-12">
         <label class="form-label">Email</label>
@@ -16,12 +16,12 @@
         </div>
     </div>
     <div class="col-md-12">
-        <label class="form-label">Otp</label>
         <div class="text d-flex" style="font-family: 'Michroma', sans-serif; align-items: center; justify-content: center;">
-          <h6 class="text ">Expires In : </h6>
-          <div id="timer" class="display-8 text-danger mb-1" style="width: 30px;">0</div>
+            <h6 class="text ">Expires In : </h6>
+            <div id="timer" class="display-8 text-danger mb-1" style="width: 30px;">0</div>
         </div>
         <a class="btn btn-dark mb-2 rounded-pill" id="startCountdownButton2">Resent Otp</a>
+        <label class="form-label d-block">Otp</label>
         <div class="input-group">
             <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
             <input type="password" class="form-control" name="otp" required>
